chore(recipes): add description to recipe and fix return type annotation (#62)
* fix(server): recipes service misses description and returns a list

* fix(server): regenerate openapi
